--- a/assignment_exs.ipynb
+++ b/assignment_exs.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "Text(0.5, 1.0, 'Rotation flow graph')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +152,8 @@
       "Discovering edges\n",
       "New edge from 0 to 1 (rule 1)\n",
       "New edge from 1 to 2 (rule 1)\n",
+      "\n",
+      "Optimizing over rotation set\n",
       " complete: False\n",
       "      con: array([], dtype=float64)\n",
       "      fun: 0.0\n",
@@ -250,7 +252,7 @@
        "([(0, 1), (1, 3), (2, 0), (3, 2)], array([ True, False, False]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -319,8 +321,7 @@
      "output_type": "stream",
      "text": [
       "([(0, 0), (1, 1), (4, 3)], [[0, 1, 2], [1, 3], [], [], [3]])\n",
-      "([(0, 0), (1, 1), (3, 4)], [[0, 1, 2, 4, 3], [1, 4], [], [4]])\n",
-      "No rotations present\n"
+      "([(0, 0), (1, 1), (3, 4)], [[0, 1, 2, 4, 3], [1, 4], [], [4]])\n"
      ]
     },
     {
@@ -329,7 +330,7 @@
        "[[], [], [], [], []]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,29 +352,22 @@
     "print(proposal.GaleShapley())\n",
     "print(proposal.GaleShapley(reverse=True))\n",
     "\n",
-    "# No output expected\n",
+    "# Empty output expected\n",
     "proposal.rotation_digraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No rotations present\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[[], [], [], [], []]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +399,7 @@
     "\n",
     "hiring = assignment(applicants, firms)\n",
     "\n",
-    "# No output expected\n",
+    "# Empty output expected\n",
     "hiring.rotation_digraph()"
    ]
   },
