add a large example; typos in discussion

--- a/discussion.ipynb
+++ b/discussion.ipynb
@@ -1182,7 +1182,7 @@
     "\n",
     "This analysis implies that the overall computational complexity of the honing algorithm is $O\\left[\\left(\\lfloor \\frac{n}{2} \\rfloor (n-1)\\right)^3\\right] = O\\left(n^6\\right)$. In practice, with a typical number of nodes, the complexity is $O\\left(n^\\frac{3}{2}\\right)$.\n",
     "\n",
-    "Thus, while there are rare, pathological cases, in which the na&iuml;ve simplex method may outperform the rotation formulation, the rotation formulation is a safer bet overall.\n",
+    "Thus, while there are rare, pathological cases in which the na&iuml;ve simplex method may outperform the rotation formulation, the rotation formulation is a safer bet overall.\n",
     "\n",
     "## Extensions and planned functionality\n",
     "\n",
@@ -1193,6 +1193,10 @@
     "### &check; Arbitary cost matrices\n",
     "\n",
     "Irving et al. discuss the possibility of using an array of cost values associated with each pairing to create a specialized cost function. In my implementation, rather than deriving the preference lists from list of weighted candidate ratings, I allow you to input an arbitrary cost array as an argument of the `assignment` class constructor. This means that you can optimize any cost function &ldquo;subject to&rdquo; the constraint that the assignment be stable.\n",
+    "\n",
+    "### Performance improvements\n",
+    "\n",
+    "The module currently uses `find()` extensively to find candidates in reviewers&rsquo; reduced lists and vice-versa. Performance could be improved greatly by storing and updating a reverse index.\n",
     "\n",
     "### Many-to-one and one-to-many assignment\n",
     "\n",
@@ -1208,7 +1212,7 @@
     "\n",
     "Cho, Geon and Dong X. Shaw. 1997. &ldquo;A Depth-First Dynamic Programming Algorithm for the Tree Knapsack Problem.&rdquo; *INFORMS Journal on Computing* 9, no. 4 (Fall): 431&ndash38.\n",
     "\n",
-    "Hochbaum, Dorit S. 2001. &ldquo;A New–Old Algorithm for Minimum-cut and Maximum-flow in Closure Graphs.&rdquo; *Networks* 37, no. 4: 171&ndash;93.\n",
+    "Hochbaum, Dorit S. 2001. &ldquo;A New&ndash;Old Algorithm for Minimum-cut and Maximum-flow in Closure Graphs.&rdquo; *Networks* 37, no. 4: 171&ndash;93.\n",
     "\n",
     "Irving, Robert W., Paul Leather, and Dan Gusfield. 1987. &ldquo;An Efficient Algorithm for the &lsquo;Optimal&rsquo; Stable Marriage.&rdquo; *Journal of the Association for Computing Machinery* 34, no. 3 (July): 532&ndash;43.\n",
     "\n",
@@ -1217,15 +1221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook discussion.ipynb to html\n",
-      "[NbConvertApp] Writing 938815 bytes to discussion.html\n"
+      "[NbConvertApp] Writing 1240853 bytes to discussion.html\n"
      ]
     }
    ],
